--- a/aspnet-core/host/Flex.Quality.HttpApi.Host/Pages/Login.cshtml
+++ b/aspnet-core/host/Flex.Quality.HttpApi.Host/Pages/Login.cshtml
@@ -9,7 +9,7 @@
 
 <html>
 <head>
-    <title>后台服务登录</title>
+    <title>Host Server Login</title>
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -18,15 +18,15 @@
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="post">
                 @Html.AntiForgeryToken()
-                <span class="heading">后台服务登录</span>
+                <span class="heading">Host Server Login</span>
                 <div class="form-group">
-                    <input type="text" class="form-control" name="userName" placeholder="用户名">
+                    <input type="text" class="form-control" name="userName" placeholder="User">
                 </div>
                 <div class="form-group help">
-                    <input type="password" class="form-control" name="password" placeholder="密码">
+                    <input type="password" class="form-control" name="password" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">登录</button>
+                    <button type="submit" class="btn btn-default">Login</button>
                 </div>
             </form>
         </div>
