feat(domain): 新增基础权限定义和组织权限定义
- 新增 BasePermissionDefinitionProvider 和 OrganizationPermissionDefinitionProvider
- 定义了基础权限组和组织权限组
- 更新了登录页面样式，添加了波浪动画效果
-调整了数据库表前缀和 schema
- 更新了本地化资源

--- a/aspnet-core/host/Flex.Quality.HttpApi.Host/Pages/Monitor.cshtml
+++ b/aspnet-core/host/Flex.Quality.HttpApi.Host/Pages/Monitor.cshtml
@@ -20,7 +20,7 @@
 
 <body>
 <div class="container projects">
-    <div class="projects-header page-header">
+    <div class="projects-header">
         <h2>Host Client Monitor</h2>
         @* <p>这些项目或者是对Bootstrap进行了有益的补充，或者是基于Bootstrap开发的</p> *@
     </div>
@@ -87,7 +87,7 @@
     }
 
     .container {
-        width: 1170px;
+        width: 100%;
         padding-right: 15px;
         padding-left: 15px;
         margin-right: auto;
@@ -99,10 +99,7 @@
         text-align: center;
         font-weight: 200;
         display: block;
-        margin: 60px auto 40px !important;
-    }
-
-    .page-header {
+        /*margin: 60px auto 40px !important;*/
         padding-bottom: 9px;
         margin: 40px auto;
         border-bottom: 1px solid #eee;
@@ -129,10 +126,6 @@
     .row {
         margin-right: -15px;
         margin-left: -15px;
-    }
-
-    .col-lg-3 {
-        width: 25%;
     }
 
     .projects .thumbnail {
